# pgcmp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md
src/: config.rs  lib.rs  main.rs  memfs.rs  migration.rs
src/cli/: mod.rs
src/commands/: apply.rs  diff.rs  init.rs  mod.rs  pull.rs  test.rs
src/comparison/: diff.rs  mod.rs
src/db/: connection.rs  extraction.rs  mod.rs
src/db/constraints/: format.rs
src/db/functions/: compare.rs  format.rs
src/db/postgres/: extraction.rs  migration.rs  mod.rs
src/db/postgres/constraints/: compare.rs  fetch.rs  mod.rs
src/db/postgres/functions/: fetch.rs  mod.rs
src/db/postgres/indexes/: compare.rs  fetch.rs  format.rs  mod.rs
src/db/postgres/sequences/: fetch.rs  format.rs  mod.rs
src/db/postgres/tables/: compare.rs  format.rs
src/db/postgres/triggers/: mod.rs
src/db/postgres/types/: compare.rs  fetch.rs
src/db/postgres/views/: format.rs
src/db/sequences/: compare.rs
src/db/tables/: fetch.rs  mod.rs
src/db/triggers/: compare.rs  fetch.rs  format.rs
src/db/types/: format.rs  mod.rs
src/db/views/: compare.rs  fetch.rs  mod.rs
src/git/: mod.rs  operations.rs
src/schema/: mod.rs  writer.rs
