[package]
name = "pgcmp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jason Garber <jgarber@appcove.com>"]
description = "PostgreSQL schema comparison and migration testing CLI, built for AI-assisted migration authoring"
repository = "https://github.com/appcove/pgcmp"
homepage = "https://github.com/appcove/pgcmp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["postgresql", "schema", "migration", "diff", "database"]
categories = ["command-line-utilities", "database"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
git2 = "0.20.3"
anyhow = "1"
console = "0.16.2"
indicatif = "0.18.3"
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
tui-textarea = { version = "0.7", features = ["crossterm"] }
pg_query = "6"
